<resources>
    <string name="app_name">TP2Loguin</string>

    /*loguin*/
    <string name="inicio">Bienvenido</string>
    <string name="usuario">Usuario (DNI) </string>
    <string name="contraseña">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrar">Registrarse</string>
    <string name="title_activity_perfil">PerfilActivity</string>
    <string name="tab_text_1">Mi Perfil</string>
    <string name="tab_text_2">Todos los Perfiles</string>


    /*registro*/
    <string name="nombre">Nombre</string>
    <string name="aoellido">Apellido</string>
    <string name="contrasenia">Contraseña</string>
    <string name="rol">Rol</string>
    <string name="mail">E-mail</string>
    <string name="Elija">Elija un Rol</string>
    <string name="todo">TODO</string>
    <string name="cargarImagen">Cargar Imagen . . . </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    /*mi Perfil*/

    /*todo los perfiles*/


    /*activity web*/

</resources>
