<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/inicio"
        android:textSize="30dp"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="271dp"
        android:layout_height="79dp"
        android:layout_gravity="center_horizontal"
        android:inputType="textPersonName"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="271dp"
        android:layout_height="79dp"
        android:layout_gravity="center_horizontal"
        android:inputType="textPassword"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        >

        <Button
            android:id="@+id/button2"
            android:layout_width="125dp"
            android:layout_height="65dp"
            android:onClick="iniciar"
            android:text="@string/ingresar" />

        <Space
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button"
            android:layout_width="125dp"
            android:layout_height="65dp"
            android:onClick="registrar"
            android:text="@string/registrar" />

    </LinearLayout>
</LinearLayout>